versions/version_live/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


/*
TYPOGRAPHY
================================
*/

h1  {
/* 	USED FOR PAGE TITLE */
	font-family: 'Oswald', Helvetica, sans-serif;
	font-weight: 800;
	font-size: 72px;
	line-height: 68px;
	letter-spacing:-2px;
	margin-bottom:24px;
	color: black;
	}

h2	{
/*  USED FOR SECTION HEADERS*/
	font-family: 'Oswald', Helvetica, sans-serif;
	font-weight: 800;
	font-size: 48px;
	line-height: 48px;
	margin-top:64px;
	padding-top:64px;
	margin-bottom:24px;
	color: black;
	border-top:1px;
	border-color:lightgray;
	border-style:solid;
	}

h3	{
/* 	USED FOR SUB HEADERS */
	font-family: 'Oswald', Helvetica, sans-serif;
	font-weight: 800;
	font-size: 32px;
	line-height: 32px;
	margin-top:24px;
	margin-bottom:16px;
	color: black;
	}

h4	{
/* 	USED FOR SUB SUB HEADERS */
	font-family: 'Oswald', Helvetica, sans-serif;
	font-weight: 500;
	font-size: 18px;
	line-height: 22px;
	text-transform:uppercase;
	margin-bottom:12px;
	color: black;
	}

p	{
/* 	USED FOR BODY TEXT */
	font-family: 'Marion', Georgia, Serif;
	font-size: 16px;
	line-height: 22px;
	color: #333333;
	margin-bottom: 12px;
	}

strong {
/* 	USED FOR BOLD (STRONG) BODY TEXT */
    font-weight:bold;
    color:black;
	}


/*
LINKS
================================
*/

a {
  font-weight:bold;
  color: #87C4C4;
  text-decoration:none;
}

a:visited {
  font-weight:bold;
  color: #87C4C4;
  text-decoration:none;
}

a:hover {
	text-decoration:underline;
	color:black;
}


/*
HEADER and BODY
================================
*/

#textbox {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	position: relative;
	float:left;
	width:100%;
	padding: 72px;
	background-color: white;
	border-radius: 2px;
	-moz-box-shadow:    0px 0px 12px 0px rgba(0, 0, 0, 0.25);
  -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.25);
  box-shadow:         0px 0px 12px 0px rgba(0, 0, 0, 0.25);
}

#header-contact {
  z-index: -2;
	position:fixed;
	top:16px;
	right:32px;
}

#header-contact a {
  font-weight:bold;
  color:white;
  text-decoration:none;
}

#header-contact a:visted {
  font-weight:bold;
  color:white;
  text-decoration:none;
}

#header-contact a:hover {
	text-decoration:underline;
}

#header-contact {
	color:white;
	text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4);
}


/*
BACKGROUND
================================
*/

.picture {
	background-size: cover;
	background-repeat: no-repeat;
	height: 100%;
	width: 100%;
	z-index: -5;
	position: fixed;
}

.overlay-grayscale {
	height: 100%;
	width: 100%;
	z-index: -4;
	position: fixed;
	background-color: rgba(255,255,255,0.2);
}

.overlay {
	height: 100%;
	width: 100%;
	z-index: -3;
	position: fixed;
	background-color: rgba(135,196,196,0.7);
}

.top-picture {
	background-size: cover;
	background-repeat: no-repeat;
	position:relative;
	float:left;
	width:100%;
	margin: 0px;
	padding: 0px;
	margin-bottom:-3px;
	z-index: -5;
}


/*
NAVIGATION
================================
*/

.nav_links li {
	display: inline-block;
  margin-top: 4px;
}

.nav-space {
	height: 40px;
}

#nav_bar {
	float: right;
	border: 0;
	background-color: rgba(255,255,255,0.9);
	border-radius: 0px;
	margin-bottom: 0;
	padding-top: 10px;
	padding-bottom: 6px;
}

.navbar-fixed {
	width: 100%;
	top: 0;
	right: 0;
	position: fixed;
	z-index: 100;
}


/*
BUTTONS
================================
*/

.buttons > li {
	display: inline-block;
	margin-right: .1em;
}

.topic-button {
	display: inline;
	float: right;
	margin-top: 72px;
}

.buttons {
	float:right;
	font-size: 15px;
}

.button-on,
.button-off {
	font-family: 'Oswald', Helvetica, sans-serif;
	font-size: .75em;
	font-weight: 400;
	border: 1px solid;
	border-radius: 3.75em;
	display: inline-block;
	line-height: 1;
	padding: 0.4em 1.2em;
	transition: all 100ms linear;
}

.button-off {
	background-color: #e9e9e9;
	border-color: #e9e9e9;
	color: #848492;
}
.button-off:hover {
	background-color: #848492;
	border-color: #848492;
	color: #e9e9e9;
}

.button-on {
	background-color: #87C4C4;
	border-color: #87C4C4;
	color: white;
}
.button-on:hover {
	background-color: #A1EAEB;
	border-color: #A1EAEB;
}


/*
Adjustments for Wider tablet and Desktop Sizes
=========================================
*/

@media all and (min-width: 1025px)
{
	.overlay-grayscale {
		background-color: rgba(255,255,255,0.5);
	}
	.overlay {
		background-color: rgba(135,196,196,0.7);
	}

	#textbox {
		position: relative;
		float:right;
		margin-top:90px;
		margin-right:144px;
		margin-bottom:36px;
		width:512px;
	}

	#header-contact {
		right:164px;
	}

	.top-picture, .navbar-fixed {
		display:none;
	}
}

@media all and (min-width: 800px) and (max-width: 1024px)
{
	#textbox {
		padding:200px 216px;
	}

	.navbar-fixed {
		padding-right: 216px;
	}
}


/*
Adjustments for Phone Sizes
=========================================
*/

@media all and (min-width: 625px) and (max-width: 799px)
{
	#textbox {
		padding:200px 144px;
	}

	.navbar-fixed {
		padding-right: 144px;
	}
}

@media all and (min-width: 501px) and (max-width: 624px)
{
	#textbox {
		padding:72px;
	}

	.navbar-fixed {
		padding-right: 72px;
	}
}

@media all and (min-width: 401px) and (max-width: 500px)
{
	#textbox {
		padding:36px;
	}

	.navbar-fixed {
		padding-right: 36px;
	}
}

@media all and (max-width: 400px)
{
	#textbox {
		padding:36px;
	}

	.navbar-fixed {
		padding-right: 36px;
	}

	#header-contact a {
    font-weight:bold;
    font-size: 13px;
    color:white;
    text-decoration:none;
	}

	#header-contact a:visited {
    font-weight:bold;
    font-size: 13px;
    color:white;
    text-decoration:none;
	}
}

